# kompute

./: .buildinfo  .ccls  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  Dockerfile  Dockerfile.seldon  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  MakefileKompute  PLAN.md  PROGRESS.md  README.md  REPORT.md  SECURITY.md  build_wheels.sh  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py  sitemap.xml  vcpkg.json.opt
.doctrees/: environment.pickle  genindex.doctree  index.doctree
_sources/: index.rst.txt
_static/: basic.css  documentation_options.js  material.css  pygments.css
benchmark/: CMakeLists.txt  TestBenchmark.cpp
benchmark/shaders/: CMakeLists.txt
builders/: Dockerfile.linux
cmake/: bin2h.cmake  bin_file_to_header.cmake  check_vulkan_version.cmake  code_coverage.cmake  deprecation_warnings.cmake  komputeConfig.cmake.in  set_package_info.cmake  vulkan_shader_compiler.cmake
codecov/: index-sort-f.html  index-sort-l.html  index.html
config/: FindSphinx.cmake
docker-builders/: KomputeBuilder.Dockerfile  Makefile  Swiftshader.Dockerfile  VulkanSDK.Dockerfile
docs/: CMakeLists.txt  conf.py  index.rst
docs/assets/: custom.css
docs/overview/: advanced-examples.rst  async-parallel.rst  build-system.rst  ci-tests.rst  community.rst  custom-operations.rst  matmul-benchmark.rst  memory-management.rst  python-examples.rst  python-package.rst  python-reference.rst  reference.rst  shaders-to-headers.rst
doxygen/: annotated.html  (+147 more)
examples/android/android-simple/app/src/main/cpp/: CMakeLists.txt  KomputeJniNative.cpp  KomputeModelML.cpp  KomputeModelML.hpp  kompute-jni.cpp
examples/android/android-simple/app/src/main/jni/: CMakeLists.txt  TutorialValLayer.cpp  TutorialValLayer.hpp  main.cpp
examples/array_multiplication/: CMakeLists.txt  README.md
examples/array_multiplication/shader/: CMakeLists.txt
examples/array_multiplication/src/: CMakeLists.txt  Main.cpp  main.cpp
examples/godot_examples/gdnative_shared/: CMakeLists.txt  README.md
examples/godot_examples/gdnative_shared/src/: KomputeSummator.cpp  KomputeSummator.hpp  gdlibrary.cpp  player.cpp  player.h  register_types.cpp  root.cpp  root.h  summator.cpp  summator.h
examples/logistic_regression/: CMakeLists.txt  README.md
examples/logistic_regression/shader/: CMakeLists.txt  my_shader.comp
examples/logistic_regression/src/: CMakeLists.txt  Main.cpp  main.cpp
examples/structure_array_multiplication/src/shaders/: CMakeLists.txt  SHADER_Mult1.comp
examples/structure_array_multiplication/src/shaders/structs/: ExampleStructure1.hpp  ExampleStructure2.hpp  StructTemplate.hpp
examples/vulkan_ext_printf/: CMakeLists.txt  README.md
examples/vulkan_ext_printf/shader/: example_shader.comp
examples/vulkan_ext_printf/src/: main.cpp
src/: Algorithm.cpp  Algorithm.hpp  BaseOp.cpp  BaseOp.hpp  BaseOperator.cpp  BaseOperator.hpp  Buffer.cpp  CMakeLists.txt  Core.cpp  ExternalTensor.cpp  GLSLCompiler.cpp  Image.cpp  Manager.cpp  Manager.hpp  Memory.cpp  OpAlgoBase.cpp  OpAlgoCreate.cpp  OpAlgoDispatch.cpp  OpAlgoFactory.cpp  OpAlgoLhsRhsOut.cpp  OpBase.hpp  OpCopy.cpp  OpCreateTensor.cpp  OpCreateTensor.hpp  OpMemoryBarrier.cpp  OpMult.cpp  OpMult.hpp  OpMult.tpp  OpSyncDevice.cpp  OpSyncLocal.cpp  OpTensorCopy.cpp  OpTensorCopyRegion.cpp  OpTensorCreate.cpp  OpTensorSyncDevice.cpp  OpTensorSyncLocal.cpp  OpTensorSyncRegionDevice.cpp  OpTensorSyncRegionLocal.cpp  Parameter.hpp  Sampler.cpp  Sequence.cpp  (+16 more)
src/include/: CMakeLists.txt
src/include/kompute/: ABCTypeContainer.hpp  Algorithm.hpp  Buffer.hpp  Cache.hpp  Core.hpp  ExternalTensor.hpp  GLSLCompiler.hpp  Image.hpp  Kompute.hpp  Manager.hpp  Memory.hpp  OpBase.hpp  OpCreateTensor.hpp  OpMult.hpp  Parameter.hpp  Sampler.hpp  Sequence.hpp  Shader.hpp  ShaderUtil.hpp  Tensor.hpp  TypeContainer.hpp  Version.h.in
src/include/kompute/logger/: Logger.hpp
src/include/kompute/operations/: OpAlgoAllInOut.hpp  OpAlgoBase.hpp  OpAlgoCreate.hpp  OpAlgoDispatch.hpp  OpAlgoFactory.hpp  OpAlgoLhsRhsOut.hpp  OpBase.hpp  OpBufferSyncDevice.hpp  OpCopy.hpp  OpCreateTensor.hpp  OpMemoryBarrier.hpp  OpMult.hpp  OpSyncDevice.hpp  OpSyncLocal.hpp  OpTensorCopy.hpp  OpTensorCopyRegion.hpp  OpTensorCreate.hpp  OpTensorSyncDevice.hpp  OpTensorSyncLocal.hpp  OpTensorSyncRegionDevice.hpp  OpTensorSyncRegionLocal.hpp
src/include/kompute/shaders/: computeheadless.hpp  machinelearning.hpp  shaderlogisticregression.hpp  shadermachinelearning.hpp  shaderopmult.hpp
src/logger/: CMakeLists.txt  Logger.cpp
src/shaders/: CMakeLists.txt  computeheadless.hpp  machinelearning.hpp  opmult.hpp  shader_util.hpp
src/shaders/glsl/: CMakeLists.txt
src/vks/: allocation.hpp  buffer.hpp  context.cpp  context.hpp  debug.cpp  debug.hpp  filesystem.cpp  filesystem.hpp  forward.hpp  helpers.hpp  image.hpp  shaders.cpp  shaders.hpp  storage.cpp  storage.hpp
test/: CMakeLists.txt  Main.cpp  ManagerTest.cpp  TestAsyncOperations.cpp  TestCustomOpRawShaders.cpp  TestDestroy.cpp  TestImage.cpp  TestLogisticRegression.cpp  TestMain.cpp  TestManager.cpp  TestManagerLifecycle.cpp  TestMultipleAlgoExecutions.cpp  TestOpAlgoLoopsPassingData.cpp  TestOpCopyImage.cpp  TestOpCopyImageToTensor.cpp  TestOpCopyTensor.cpp  TestOpCopyTensorToImage.cpp  TestOpCreateTensor.cpp  TestOpImageCreate.cpp  TestOpShadersFromStringAndFile.cpp  TestOpSync.cpp  TestOpTensorCopy.cpp  TestOpTensorCreate.cpp  TestOpTensorSync.cpp  TestPushConstant.cpp  TestSequence.cpp  TestShaderResources.cpp  TestSpecializationConstant.cpp  TestTensor.cpp  TestUtils.cpp  TestUtils.hpp  TestVersionDefined.cpp  TestWorkgroup.cpp
test/compiled_shaders_include/kompute_test/shaders/: shadertest_logistic_regression.hpp  shadertest_op_custom_shader.hpp  shadertest_workgroup.hpp
test/shaders/: CMakeLists.txt
test/shaders/glsl/: CMakeLists.txt  test_logistic_regression.comp  test_logistic_regression.comp.spv  test_op_custom_shader.comp  test_op_custom_shader.comp.spv  test_workgroup.comp.spv
test/utils/kompute_test/: Shader.cpp  Shader.hpp
(+319 files in other folders)
